samples/_failures_safe/1761292240_b9be58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b95bae67.c: In function ‘main’:
./samples/SAFE/__tmp_b95bae67.c:158:9: error: expected declaration or statement at end of input
  158 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_b95bae67.c:158:9: error: expected declaration or statement at end of input
